unpackaged/main/default/objects/Project_Account__c/Project_Account__c.object-meta.xml
<CustomObject>
    <description>Accounts associated to a Project</description>
    <label>Project Account</label>
    <nameField>
        <displayFormat>PA-{0000000000}</displayFormat>
        <label>Project Account Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>