unpackaged/main/default/objects/Project_Account__c/fields/Association__c.field-meta.xml
<CustomField>
    <fullName>Association__c</fullName>
    <label>Association</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>End User</fullName>
            </value>
            <value>
                <fullName>Design Firm/Consultant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>